negative fitness allowed

--- a/proje.ipynb
+++ b/proje.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
        "4            Waffles Buttermilk Frozen Ready-To-Heat     273.0         6.58"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,11 +100,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calculateFitness(chromosome: list, maxWeight: int):\n",
+    "def calculateFitness(chromosome: list, maxWeight: int, negative: bool):\n",
     "    totalValue = 0\n",
     "    totalWeight = 0\n",
     "\n",
@@ -120,13 +120,15 @@
     "    # Fitness = Total Proteins - (Total Calories - Max Calorie Given as Input) * Penalty Value\n",
     "    fitness = totalValue - (totalWeight - maxWeight) * penalty\n",
     "\n",
-    "    return max(0, fitness)\n",
-    "    "
+    "    if not negative:\n",
+    "        return max(0, fitness)\n",
+    "    else:\n",
+    "        return fitness"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,14 +155,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0, 1, 0, 0, 0, 1], [1, 0, 1, 1, 0, 1]]\n"
+      "[[0, 0, 1, 1, 0, 1], [1, 1, 0, 0, 0, 1]]\n"
      ]
     }
    ],
@@ -174,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,14 +211,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0, 0, 0, 0, 0, 1], [1, 1, 1, 1, 0, 1]]\n"
+      "[[0, 1, 0, 0, 0, 1], [1, 0, 1, 1, 0, 1]]\n"
      ]
     }
    ],
@@ -230,13 +232,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "def uniformCrossover(firstParent: list, secondParent: list, maxWeight: int):\n",
-    "    firstFitness = calculateFitness(firstParent, maxWeight)\n",
-    "    secondFitness = calculateFitness(secondParent, maxWeight)\n",
+    "    firstFitness = calculateFitness(firstParent, maxWeight, False)\n",
+    "    secondFitness = calculateFitness(secondParent, maxWeight, False)\n",
     "\n",
     "    # Probability in the uniform crossover is fp_1 / (fp_1 + fp_2), where fp_1 is the fitness of the first parent and fp_2 is the fitness of the second parent\n",
     "    probability = firstFitness / (firstFitness + secondFitness)\n",
@@ -264,14 +266,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0, 0, 1, 1, 0, 1], [1, 1, 0, 0, 0, 1]]\n"
+      "[[0, 0, 0, 0, 0, 1], [1, 1, 1, 1, 0, 1]]\n"
      ]
     }
    ],
@@ -285,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,14 +306,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1, 1, 0, 1, 0, 0, 0, 1, 1, 1], [1, 0, 1, 0, 0, 0, 1, 0, 1, 1], [1, 0, 1, 1, 0, 1, 1, 1, 1, 1], [0, 1, 1, 0, 0, 0, 1, 0, 1, 0], [0, 0, 1, 1, 1, 0, 1, 1, 1, 1], [1, 1, 0, 1, 0, 1, 1, 1, 1, 0], [1, 0, 0, 0, 1, 0, 1, 0, 0, 1], [1, 0, 0, 1, 1, 1, 0, 1, 1, 0], [0, 1, 0, 0, 0, 0, 1, 0, 0, 0], [1, 1, 0, 1, 0, 0, 1, 0, 1, 0]]\n"
+      "[[1, 0, 1, 1, 0, 0, 0, 0, 0, 0], [0, 0, 1, 0, 0, 0, 1, 1, 1, 0], [1, 1, 0, 0, 1, 1, 1, 0, 0, 0], [0, 0, 0, 1, 1, 1, 1, 1, 1, 1], [0, 0, 1, 1, 0, 1, 0, 0, 0, 0], [0, 1, 1, 1, 0, 1, 0, 0, 0, 1], [1, 0, 1, 0, 1, 1, 1, 0, 0, 1], [0, 0, 1, 1, 1, 0, 1, 1, 0, 1], [1, 1, 0, 1, 0, 1, 1, 1, 0, 0], [1, 0, 1, 0, 0, 0, 1, 1, 1, 0]]\n"
      ]
     }
    ],
@@ -322,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +351,8 @@
     "\n",
     "    # Add all fitnesses\n",
     "    for i in population:\n",
-    "        fitness = calculateFitness(i, maxWeight)\n",
+    "        # Negative fitness is not allowed\n",
+    "        fitness = calculateFitness(i, maxWeight, False)\n",
     "        fitnesses.append(fitness)\n",
     "        total_fitness += fitness\n",
     "\n",
@@ -372,44 +375,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 1, 1, 1, 1] 521.4\n",
-      "[0, 1, 0, 1, 1] 851.42\n",
-      "[1, 1, 0, 1, 0] 833.72\n",
-      "[1, 0, 0, 0, 1] 972.46\n",
-      "[1, 0, 1, 0, 1] 790.06\n",
-      "[1, 0, 0, 0, 0] 1102.38\n",
+      "[0, 0, 0, 1, 1] 1012.08\n",
       "[0, 0, 0, 0, 1] 1120.08\n",
-      "[1, 1, 1, 1, 1] 521.4\n",
-      "[0, 0, 1, 0, 1] 937.68\n",
-      "[1, 0, 1, 1, 1] 682.06\n",
-      "\n"
+      "[1, 0, 1, 1, 0] 811.98\n",
+      "[0, 0, 0, 1, 1] 1012.08\n",
+      "[1, 1, 1, 0, 0] 759.32\n",
+      "[0, 0, 1, 1, 0] 959.6\n",
+      "[0, 1, 1, 0, 0] 906.94\n",
+      "[0, 1, 1, 0, 1] 777.02\n",
+      "[0, 1, 1, 1, 1] 669.02\n",
+      "[0, 0, 0, 1, 0] 1142.0\n",
+      "\n",
+      "[0, 0, 0, 1, 0]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[0, 1, 0, 1, 1]"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "population = initializePopulation(10, 5)\n",
     "for i in range(len((population))):\n",
-    "    print(population[i], calculateFitness(population[i], 2500))\n",
+    "    print(population[i], calculateFitness(population[i], 2500, False))\n",
     "\n",
     "print()\n",
-    "rouletteWheelSelection(population, 2500)"
+    "selected = rouletteWheelSelection(population, 2500)\n",
+    "print(selected)"
    ]
   }
  ],
