--- a/proje.ipynb
+++ b/proje.ipynb
@@ -2,19 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "# Read data\n",
-    "df = pd.read_excel(\"MyFoodData.xlsx\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -87,12 +75,17 @@
        "4            Waffles Buttermilk Frozen Ready-To-Heat     273.0         6.58"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Read data\n",
+    "df = pd.read_excel(\"MyFoodData.xlsx\")\n",
+    "\n",
     "# Drops unrelevant columns\n",
     "df = df.filter(items = [\"Name\", \"Calories\", \"Protein (g)\"])\n",
     "df.head()"
@@ -100,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +121,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random \n",
+    "\n",
+    "def initializePopulation(populationSize: int, chromosomeSize: int):\n",
+    "    population = []\n",
+    "\n",
+    "    # Randomly generate populationSize amount of chromosomes with chromosomeSize size\n",
+    "    for i in range(populationSize):\n",
+    "        member = [random.randint(0, 1) for i in range(chromosomeSize)]\n",
+    "        population.append(member)\n",
+    "       \n",
+    "    return population"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def rouletteWheelSelection(population: list[list], maxWeight: int):\n",
+    "    total_fitness = 0\n",
+    "    fitnesses = []\n",
+    "\n",
+    "    # Add all fitnesses\n",
+    "    for i in population:\n",
+    "        # Negative fitness is not allowed\n",
+    "        fitness = calculateFitness(i, maxWeight, False)\n",
+    "        fitnesses.append(fitness)\n",
+    "        total_fitness += fitness\n",
+    "\n",
+    "    # An individual in the population have fitness / (sum of all fitnesses) chance to be selected in the Roulette Wheel Selection\n",
+    "    prob_sum = 0\n",
+    "    # Random float as roulette\n",
+    "    roulette = random.uniform(0, total_fitness)\n",
+    "    for i in range(len(population)):\n",
+    "        # If the prob_sum + fitness of the individual exceedes the roulette value, the roulette is in that probability area, so the individual is selected\n",
+    "        # Example:\n",
+    "        # If we have 5 individuals with fitness values 5, 10, 15, 6, 3 and roulette as 21, the individual with fitness value 15 should be selected.\n",
+    "        # In the first iteration of the loop prob_sum would be 5, in the second iteration 15 and in the third iteration it would be 30, exceeding the roulette value\n",
+    "        # Third individual from the population would be selected according to this algorithm\n",
+    "        prob_sum += fitnesses[i]\n",
+    "        if prob_sum > roulette:\n",
+    "            return population[i]\n",
+    "\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1, 0, 0, 0] 941.72\n",
+      "[1, 0, 1, 1, 1] 682.06\n",
+      "[1, 1, 0, 0, 1] 811.8\n",
+      "[0, 1, 0, 0, 0] 1089.34\n",
+      "[0, 0, 1, 0, 0] 1067.6\n",
+      "[0, 0, 1, 1, 0] 959.6\n",
+      "[0, 1, 0, 1, 1] 851.42\n",
+      "[1, 1, 1, 1, 1] 521.4\n",
+      "[0, 0, 0, 0, 1] 1120.08\n",
+      "[0, 1, 0, 0, 0] 1089.34\n",
+      "\n",
+      "[0, 1, 0, 1, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "population = initializePopulation(10, 5)\n",
+    "for i in range(len((population))):\n",
+    "    print(population[i], calculateFitness(population[i], 2500, False))\n",
+    "\n",
+    "print()\n",
+    "selected = rouletteWheelSelection(population, 2500)\n",
+    "print(selected)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,14 +291,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0, 1, 0, 0, 0, 1], [1, 0, 1, 1, 0, 1]]\n"
+      "[[0, 0, 1, 0, 0, 1], [1, 1, 0, 1, 0, 1]]\n"
      ]
     }
    ],
@@ -232,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,14 +346,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0, 0, 0, 0, 0, 1], [1, 1, 1, 1, 0, 1]]\n"
+      "[[0, 1, 1, 1, 0, 1], [1, 0, 0, 0, 0, 1]]\n"
      ]
     }
    ],
@@ -287,124 +367,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import random \n",
-    "\n",
-    "def initializePopulation(populationSize: int, chromosomeSize: int):\n",
-    "    population = []\n",
-    "\n",
-    "    # Randomly generate populationSize amount of chromosomes with chromosomeSize size\n",
-    "    for i in range(populationSize):\n",
-    "        member = [random.randint(0, 1) for i in range(chromosomeSize)]\n",
-    "        population.append(member)\n",
-    "       \n",
-    "    return population"
+    "def mutation(chromosome: list, rate: int):\n",
+    "    mutationsRate = 1 / rate\n",
+    "    for i in range(len(chromosome)):\n",
+    "        if random.random() <= mutationsRate:\n",
+    "            chromosome[i] = 1 - chromosome[i]\n",
+    "    return chromosome"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1, 0, 1, 1, 0, 0, 0, 0, 0, 0], [0, 0, 1, 0, 0, 0, 1, 1, 1, 0], [1, 1, 0, 0, 1, 1, 1, 0, 0, 0], [0, 0, 0, 1, 1, 1, 1, 1, 1, 1], [0, 0, 1, 1, 0, 1, 0, 0, 0, 0], [0, 1, 1, 1, 0, 1, 0, 0, 0, 1], [1, 0, 1, 0, 1, 1, 1, 0, 0, 1], [0, 0, 1, 1, 1, 0, 1, 1, 0, 1], [1, 1, 0, 1, 0, 1, 1, 1, 0, 0], [1, 0, 1, 0, 0, 0, 1, 1, 1, 0]]\n"
+      "[0, 0, 1, 1, 1, 0, 1]\n"
      ]
     }
    ],
    "source": [
-    "population = initializePopulation(10, 10)\n",
-    "print(population)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Hello\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def rouletteWheelSelection(population: list[list], maxWeight: int):\n",
-    "    total_fitness = 0\n",
-    "    fitnesses = []\n",
-    "\n",
-    "    # Add all fitnesses\n",
-    "    for i in population:\n",
-    "        # Negative fitness is not allowed\n",
-    "        fitness = calculateFitness(i, maxWeight, False)\n",
-    "        fitnesses.append(fitness)\n",
-    "        total_fitness += fitness\n",
-    "\n",
-    "    # An individual in the population have fitness / (sum of all fitnesses) chance to be selected in the Roulette Wheel Selection\n",
-    "    prob_sum = 0\n",
-    "    # Random float as roulette\n",
-    "    roulette = random.uniform(0, total_fitness)\n",
-    "    for i in range(len(population)):\n",
-    "        # If the prob_sum + fitness of the individual exceedes the roulette value, the roulette is in that probability area, so the individual is selected\n",
-    "        # Example:\n",
-    "        # If we have 5 individuals with fitness values 5, 10, 15, 6, 3 and roulette as 21, the individual with fitness value 15 should be selected.\n",
-    "        # In the first iteration of the loop prob_sum would be 5, in the second iteration 15 and in the third iteration it would be 30, exceeding the roulette value\n",
-    "        # Third individual from the population would be selected according to this algorithm\n",
-    "        prob_sum += fitnesses[i]\n",
-    "        if prob_sum > roulette:\n",
-    "            return population[i]\n",
-    "\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 0, 0, 1, 1] 1012.08\n",
-      "[0, 0, 0, 0, 1] 1120.08\n",
-      "[1, 0, 1, 1, 0] 811.98\n",
-      "[0, 0, 0, 1, 1] 1012.08\n",
-      "[1, 1, 1, 0, 0] 759.32\n",
-      "[0, 0, 1, 1, 0] 959.6\n",
-      "[0, 1, 1, 0, 0] 906.94\n",
-      "[0, 1, 1, 0, 1] 777.02\n",
-      "[0, 1, 1, 1, 1] 669.02\n",
-      "[0, 0, 0, 1, 0] 1142.0\n",
-      "\n",
-      "[0, 0, 0, 1, 0]\n"
-     ]
-    }
-   ],
-   "source": [
-    "population = initializePopulation(10, 5)\n",
-    "for i in range(len((population))):\n",
-    "    print(population[i], calculateFitness(population[i], 2500, False))\n",
-    "\n",
-    "print()\n",
-    "selected = rouletteWheelSelection(population, 2500)\n",
-    "print(selected)"
+    "chromosome = [0, 0, 1, 1, 1, 0, 1]\n",
+    "print(mutation(chromosome, 10))"
    ]
   }
  ],
