--- a/proje.ipynb
+++ b/proje.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
        "4            Waffles Buttermilk Frozen Ready-To-Heat     273.0         6.58"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,6 +174,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def tournamentSelection(population: list[list], tournamentSize: int, maxWeight: int):\n",
+    "    # tournamentSize amount of individuals are selected for the tournament\n",
+    "    randomIndividuals = random.sample(range(0, len(population)), tournamentSize)\n",
+    "    bestFitness = -1\n",
+    "    bestIndividual = []\n",
+    "    print(randomIndividuals)\n",
+    "    \n",
+    "    for i in randomIndividuals:\n",
+    "        # Individual with best fitness wins the tournament\n",
+    "        # This individual is selected\n",
+    "        fitness = calculateFitness(population[i], maxWeight, False)\n",
+    "        print(f\"Individual {i}, fitness {fitness}\")\n",
+    "        if fitness > bestFitness:\n",
+    "            bestFitness = fitness\n",
+    "            bestIndividual = i\n",
+    "    return bestIndividual\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 2, 7, 0]\n",
+      "Individual 4, fitness 651.32\n",
+      "Individual 2, fitness 629.4\n",
+      "Individual 7, fitness 829.68\n",
+      "Individual 0, fitness 972.46\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "population = initializePopulation(10, 5)\n",
+    "\n",
+    "bestIndividual = tournamentSelection(population, 4, 2500)\n",
+    "print(bestIndividual)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
@@ -181,18 +230,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 1, 0, 0, 0] 941.72\n",
       "[1, 0, 1, 1, 1] 682.06\n",
-      "[1, 1, 0, 0, 1] 811.8\n",
-      "[0, 1, 0, 0, 0] 1089.34\n",
-      "[0, 0, 1, 0, 0] 1067.6\n",
-      "[0, 0, 1, 1, 0] 959.6\n",
-      "[0, 1, 0, 1, 1] 851.42\n",
+      "[0, 1, 0, 1, 0] 981.34\n",
+      "[0, 0, 0, 1, 0] 1142.0\n",
       "[1, 1, 1, 1, 1] 521.4\n",
-      "[0, 0, 0, 0, 1] 1120.08\n",
-      "[0, 1, 0, 0, 0] 1089.34\n",
+      "[0, 1, 1, 1, 1] 669.02\n",
+      "[0, 1, 1, 0, 1] 777.02\n",
+      "[0, 0, 1, 0, 0] 1067.6\n",
+      "[1, 1, 1, 1, 1] 521.4\n",
+      "[0, 1, 1, 0, 1] 777.02\n",
+      "[1, 1, 1, 0, 0] 759.32\n",
       "\n",
-      "[0, 1, 0, 1, 1]\n"
+      "[0, 0, 0, 1, 0]\n"
      ]
     }
    ],
@@ -208,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,14 +340,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0, 0, 1, 0, 0, 1], [1, 1, 0, 1, 0, 1]]\n"
+      "[[0, 1, 0, 1, 0, 1], [1, 0, 1, 0, 0, 1]]\n"
      ]
     }
    ],
@@ -312,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,14 +395,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0, 1, 1, 1, 0, 1], [1, 0, 0, 0, 0, 1]]\n"
+      "[[1, 1, 1, 1, 0, 1], [0, 0, 0, 0, 0, 1]]\n"
      ]
     }
    ],
@@ -367,13 +416,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def mutation(chromosome: list, rate: int):\n",
     "    mutationsRate = 1 / rate\n",
     "    for i in range(len(chromosome)):\n",
+    "        # random.random() generates a float between 0 and 1\n",
+    "        # If this number is less than or equal to mutation rate there is a bit flip in that gene (mutation occurs)\n",
     "        if random.random() <= mutationsRate:\n",
     "            chromosome[i] = 1 - chromosome[i]\n",
     "    return chromosome"
@@ -381,14 +432,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 0, 1, 1, 1, 0, 1]\n"
+      "[0, 1, 1, 1, 1, 0, 0]\n"
      ]
     }
    ],
